Заменил формат ввода дат

--- a/AnswersLoader/appsettings.json
+++ b/AnswersLoader/appsettings.json
@@ -4,13 +4,13 @@
   "app_id": 7602258,
   "sleep_time_ms": 2,
   "groups": [
-    "ПИ_11",
-    "ПИ_12",
-    "ПИ_13", 
-    "ПИ_21",
-    "ПИ_22",
-    "ПИ_41", 
-    "ИСЭ_41",
-    "ПИМ_21"
+    {
+      "name": "ПИ_41",
+      "tests": [
+        "12.09.20",
+        "14.09.20",
+        "1.11.20"
+      ]
+    }    
   ]
 }
