Вынес настройку окрестности

--- a/AnswersLoader/appsettings.json
+++ b/AnswersLoader/appsettings.json
@@ -3,6 +3,7 @@
   "pass": "pass",
   "app_id": 7602258,
   "sleep_time_ms": 2,
+  "date_neighborhood": 2,
   "groups": [
     {
       "name": "ПИ_41",
